fix: large spacing beween cards at 1024px

--- a/styles/custom-css/employer-employees-gallery.css
+++ b/styles/custom-css/employer-employees-gallery.css
@@ -78,20 +78,25 @@ select.form-control{
 
 @media screen and (min-width: 576px){
   .profile-card{
-    min-width: calc(50% - 8px);
+    min-width: calc(50% - 12px);
   }
 }
 @media screen and (min-width: 992px){
-  .profile-card{
-    min-width: calc(33% - 16px);
-  }
+
   .main-content{
     width: auto;
     margin-left: 230px;
   }
 }
-@media screen and (min-width: 992px){
+/* 
+@media screen and (min-width: 1023.8px){
   .profile-card{
-    min-width: calc(33% - 24px);
+    min-width: calc(50% - 24px);
+  }
+}  */
+
+@media screen and (min-width: 1200px){
+  .profile-card{
+    min-width: calc(33% - 12px);
   }
 } 
